# ibmw

./: .gitignore  AZURE_SETUP_GUIDE.md  DEMO_MODE_IMPLEMENTATION.md  DEPLOY_AZURE_EMBEDDING.md  README.md  START_ALL.bat  docker-compose.yml  script.md  update-embedding-config.sh
backend/: .dockerignore  .env.example  Dockerfile  apply_migrations.py  check_audit_table.py  check_constraints.py  check_schema.py  create_code_map.py  pyproject.toml  requirements.txt  run_test_preload.bat  test_endpoints.py  test_preload.bat  test_preload.py  test_regulation_chunks.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: admin.py  analysis.py  auth.py  dashboard.py  hitl_review.py  installations.py  integrations.py  job_status.py  mcp_server.py  regulations.py  user_repos.py  violations.py  webhooks.py
backend/app/core/: exceptions.py  github_auth.py  github_client.py  github_oauth.py  security.py  webhook_verifier.py
backend/app/models/: database.py  job_status.py  regulation.py  rule_model.py  schemas.py
backend/app/prompts/: __init__.py  templates.py
backend/app/services/: agents.py  chunker.py  code_parser.py  compliance_scanner.py  embeddings.py  hitl_reviewer.py  langgraph_agent.py  llm.py  storage.py  (+13 more)
backend/migrations/: 001_create_tables.sql  002_add_oauth_support.sql  003_agentic_compliance.sql  004_review_queue.sql  005_code_map.sql  006_agent_execution.sql  007_audit_cases.sql
backend/postman/: compliance-engine.postman_collection.json
backend/scripts/: create-github-app.md  seed_demo_data.py  setup-local.bat  setup-local.sh  start-dev.sh
backend/tests/: conftest.py  test_api.py  test_chunker.py  test_embeddings.py  test_github_auth.py  test_webhook_signature.py
(+35 files in other folders)
